# Materia-Integradora-Gonzalez-Lucin

./: .gitignore  README.md  READMEes.md  requirements.txt
coco_services/: CMakeLists.txt  README.md  package.xml
coco_services/launch/: launch_listener  launch_master_service.py
coco_services/srv/: LaunchService.srv
coco_sim_ws/src/coco_simulations/coco_gazebo_sim/config/: coco_controllers.yaml
coco_sim_ws/src/coco_simulations/coco_gazebo_sim/launch/: coco_robot.launch.py
coco_sim_ws/src/coco_simulations/coco_simulations/: CMakeLists.txt  package.xml
ros2_tesis/posture_game/: CMakeLists.txt
ros2_tesis/posture_game/config/: usb_cam_params.yaml
ros2_tesis/posture_game/include/posture_game/: postures.hpp
ros2_tesis/posture_game/launch/: emotion_detector_launch.py  game_launch.py
ros2_tesis/posture_game/scripts/: detect_emotions_node.py  game_manage_node.py  mediapipe_node.py  speaker_node.py
ros2_tesis/posture_game/src/: movement_publisher_node.cpp  postures.cpp
rosbridge_suite/.github/workflows/: ci.yml
rosbridge_suite/rosapi/: CMakeLists.txt  package.xml
rosbridge_suite/rosapi_msgs/: CMakeLists.txt  package.xml
rosbridge_suite/rosbridge_library/: CMakeLists.txt  package.xml
rosbridge_suite/rosbridge_msgs/: package.xml
rosbridge_suite/rosbridge_server/: CMakeLists.txt  package.xml
rosbridge_suite/rosbridge_test_msgs/: package.xml
yaren_memory/posture_game/: CMakeLists.txt
yaren_memory/posture_game/include/posture_game/: postures.hpp
yaren_memory/posture_game/scripts/: game_manage_node.py  stats_manager.py
yaren_memory/posture_game/src/: postures.cpp
yaren_services/: CMakeLists.txt  package.xml
yaren_services/launch/: launch_master_service.py
yaren_sim_ws/src/yaren_simulations/: .gitignore
yaren_sim_ws/src/yaren_simulations/yaren_gazebo_sim/launch/: coco_robot.launch.py
yaren_sim_ws/src/yaren_simulations/yaren_simulations/: CMakeLists.txt  package.xml
yaren_ws/src/yaren/yaren/: CMakeLists.txt  package.xml
yaren_ws/src/yaren/yaren_arm_mimic/: CMakeLists.txt
yaren_ws/src/yaren/yaren_bringup/: CMakeLists.txt  package.xml
yaren_ws/src/yaren/yaren_communication/: CMakeLists.txt  package.xml
yaren_ws/src/yaren/yaren_description/: CMakeLists.txt
yaren_ws/src/yaren/yaren_face_display/: CMakeLists.txt  package.xml  plugins_description.xml
yaren_ws/src/yaren/yaren_interfaces/: CMakeLists.txt
yaren_ws/src/yaren/yaren_joysticks/: CMakeLists.txt  package.xml
yaren_ws/src/yaren/yaren_moveit2_config/: .setup_assistant
(+15 files in other folders)
