<?xml version="1.0"?>
<package format="3">
  <name>coco_services</name>
  <version>0.0.0</version>
  <description>Servicios ROS personalizados para comunicación con Android via rosbridge</description>

  <maintainer email="juan@todo.todo">juan</maintainer>
  <license>Apache License 2.0</license>

  <!-- Cambiado a ament_cmake -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Para generar interfaces (srv/msg) -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Otros que ya tienes -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <!-- Dependencias de prueba -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Para que rosidl lo reconozca -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

